Consistent coding in scripts

--- a/source-code/py-notebook/conservation/NSW-conservation.ipynb
+++ b/source-code/py-notebook/conservation/NSW-conservation.ipynb
@@ -51,11 +51,13 @@
     "import urllib.request, json\n",
     "import os\n",
     "import sys\n",
+    "import datetime\n",
     "\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "import list_functions as lf\n"
    ],
    "metadata": {
@@ -221,21 +223,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing to CSV\n",
-      "Finished processing\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(\"Writing to CSV\")\n",
     "conservationlist.to_csv(projectDir + \"current-lists/conservation-lists/NSW-conservationlist-20230601.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished writing NSW conservation list')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# NSW conservation\n",
+    "print('NSW conservation')\n",
+    "ltype = \"C\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "filename = \"NSW-conservation.csv\"\n",
+    "testdr = \"dr650\"\n",
+    "proddr = \"dr650\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished NSW conservation')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Download historical lists from Production\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
