--- a/source-code/py-notebook/conservation/WA-conservation.ipynb
+++ b/source-code/py-notebook/conservation/WA-conservation.ipynb
@@ -50,12 +50,19 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
+    "import datetime\n",
     "\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "sourceDataDir = projectDir + \"source-data/WA/\"\n",
     "processedDataDir = projectDir + \"current-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf\n",
     "\n",
     "faunafilename = sourceDataDir + \"Threatened and Priority Fauna List 7 October2022.csv\"\n",
     "florafilename = sourceDataDir + \"Threatened and Priority Flora List 6 October2022.csv\""
@@ -578,11 +585,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "floraandfauna.to_csv(projectDir + \"current-lists/conservation-lists/WA-conservation-20230601.csv\", encoding=\"UTF-8\",index=False)\n",
     "print(\"Finished writing WA conservation list\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"C\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# WA Conservation\n",
+    "print('WA conservation')\n",
+    "filename = \"WA-conservation.csv\"\n",
+    "testdr = \"dr2201\"\n",
+    "proddr = \"dr2201\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished WA conservation')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Download historical lists from Production\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
