--- a/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
@@ -40,20 +40,19 @@
    "source": [
     "# set up\n",
     "import pandas as pd\n",
-    "import json\n",
-    "import urllib.request\n",
-    "import certifi\n",
-    "import ssl\n",
+    "import datetime\n",
+    "import sys\n",
+    "import os\n",
     "\n",
     "# top level directory\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "sourceDir = projectDir + \"source-data/act/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\"\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "\n",
-    "import pandas as pd\n",
-    "import sys\n",
-    "import os\n"
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf"
    ],
    "metadata": {
     "collapsed": false,
@@ -162,19 +161,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished writing ACT Sensitive List\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "sensitivelist.to_csv(projectDir + sdataDir + 'ACT-sensitive-20230614.csv', encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing ACT Sensitive List')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change Logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"S\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "\n",
+    "# ACT Sensitive\n",
+    "print('ACT sensitive')\n",
+    "filename = \"ACT-sensitive.csv\"\n",
+    "testdr = \"dr2627\"\n",
+    "proddr = \"dr2627\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished ACT sensitive')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Sensitive Lists\n",
+    "state= \"ACT\"\n",
+    "filename = state + \"-\" + proddr + \"-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading sensitive historical list')"
    ],
    "metadata": {
     "collapsed": false,
