--- a/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
@@ -52,12 +52,14 @@
     "import urllib.request, json\n",
     "import os\n",
     "import sys\n",
+    "import datetime\n",
     "\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
-    "# import list_functions as lf\n"
+    "# import list_functions as lf\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')"
    ],
    "metadata": {
     "collapsed": false,
@@ -207,21 +209,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing to CSV\n",
-      "Finished writing NSW Sensitive list\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(\"Writing to CSV\")\n",
     "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive-20230614.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished writing NSW Sensitive list')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# NSW Sensitive\n",
+    "ltype = \"S\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "\n",
+    "print('NSW sensitive')\n",
+    "filename = \"NSW-sensitive.csv\"\n",
+    "testdr = \"dr18457\"\n",
+    "proddr = \"dr487\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished NSW sensitive')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Sensitive Lists\n",
+    "state= \"ACT\"\n",
+    "filename = state + \"-\" + proddr + \"-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading sensitive historical list')"
    ],
    "metadata": {
     "collapsed": false,
