--- a/source-code/py-notebook/sensitive/NT-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/NT-sensitive.ipynb
@@ -55,10 +55,16 @@
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
+    "import datetime\n",
+    "\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "sourcedir = \"source-data/NT/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
-    "sdataDir = \"current-lists/sensitive-lists/\""
+    "sdataDir = \"current-lists/sensitive-lists/\"\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf"
    ],
    "metadata": {
     "collapsed": false,
@@ -105,8 +111,6 @@
     }
    ],
    "source": [
-    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
-    "import list_functions as lf\n",
     "\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr492\" + \"?max=10000&includeKVP=true\"\n",
     "sensitivelist = lf.download_ala_specieslist(prodListUrl)\n",
@@ -150,21 +154,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished writing NT Sensitive list\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "#Write to CSV\n",
     "# conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation.csv\",index=False)\n",
     "sensitivelist.to_csv(projectDir + sdataDir + \"NT-sensitive-20230614.csv\",  encoding=\"UTF-8\", index=False)\n",
-    "print('Finished writing NT Sensitive list')\n"
+    "print('Finished writing NT Sensitive list')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change Logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# NT Sensitive\n",
+    "ltype = \"S\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "\n",
+    "print('NT sensitive')\n",
+    "filename = \"NT-sensitive.csv\"\n",
+    "testdr = \"dr18690\"\n",
+    "proddr = \"dr492\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished NT sensitive')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Sensitive Lists\n",
+    "state= \"NT\"\n",
+    "filename = state + \"-\" + proddr + \"-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading sensitive historical list')"
    ],
    "metadata": {
     "collapsed": false,
