--- a/source-code/py-notebook/sensitive/QLD-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/QLD-sensitive.ipynb
@@ -72,6 +72,7 @@
     "from ftfy import fix_encoding\n",
     "import os\n",
     "import sys\n",
+    "import datetime\n",
     "\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
@@ -81,6 +82,7 @@
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "processedDataDir = projectDir + \"current-lists/\"\n",
     "state = 'QLD'\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "codesfile = statusDir + state + \"-codes.csv\"\n",
     "codesurl =  \"https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/species-status-codes.csv\"\n",
     "sensitivelisturl = \"https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/qld-confidential-species.csv\""
@@ -289,19 +291,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished writing QLD Sensitive list\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "sensitivelist.to_csv(processedDataDir + \"sensitive-lists/QLD-sensitive-20230614.csv\",encoding=\"UTF-8\",index=False)\n",
     "print(\"Finished writing QLD Sensitive list\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"S\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# Qld Sensitive\n",
+    "print('QLD sensitive')\n",
+    "filename = \"QLD-sensitive.csv\"\n",
+    "testdr = \"dr18404\"\n",
+    "proddr = \"dr493\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished QLD sensitive')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Sensitive Lists\n",
+    "\n",
+    "filename = state + \"-\" + proddr + \"-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading sensitive historical list')"
    ],
    "metadata": {
     "collapsed": false,
