--- a/source-code/py-notebook/sensitive/SA-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/SA-sensitive.ipynb
@@ -38,14 +38,15 @@
    "source": [
     "#import essential libraries\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
     "import sys\n",
+    "import datetime\n",
     "\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\"\n",
     "sourceData = \"source-data/SA/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
@@ -156,20 +157,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished writing SA Sensitive list\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# sasensitive.to_csv(\"~/IdeaProjects/authoritative-lists/current-lists/sensitive-lists/SA-sensitive.csv\",encoding=\"UTF-8\",index=False)\n",
     "sensitivelist.to_csv(projectDir + sdataDir + \"SA-sensitive-20230614.csv\", encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing SA Sensitive list\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"S\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "\n",
+    "# SA Sensitive\n",
+    "print('SA sensitive')\n",
+    "filename = \"SA-sensitive.csv\"\n",
+    "testdr = \"dr18706\"\n",
+    "proddr = \"dr884\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished SA sensitive')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Sensitive Lists\n",
+    "state= \"SA\"\n",
+    "filename = state + \"-\" + proddr + \"-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading sensitive historical list')"
    ],
    "metadata": {
     "collapsed": false,
