--- a/source-code/py-notebook/sensitive/WA-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/WA-sensitive.ipynb
@@ -50,12 +50,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
+    "import datetime\n",
     "\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "sourceDataDir = projectDir + \"source-data/WA/\"\n",
     "processedDataDir = projectDir + \"current-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "\n",
     "faunafilename = sourceDataDir + \"Threatened and Priority Fauna List 7 October2022.csv\"\n",
     "florafilename = sourceDataDir + \"Threatened and Priority Flora List 6 October2022.csv\""
@@ -628,7 +630,53 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"S\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# WA Sensitive\n",
+    "print('WA sensitive')\n",
+    "filename = \"WA-sensitive.csv\"\n",
+    "testdr = \"dr18406\"\n",
+    "proddr = \"dr467\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished WA sensitive')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Sensitive Lists\n",
+    "state= \"WA\"\n",
+    "filename = state + \"-\" + proddr + \"-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading sensitive historical list')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
