--- a/source-code/py-notebook/conservation/EPBC-conservation.ipynb
+++ b/source-code/py-notebook/conservation/EPBC-conservation.ipynb
@@ -179,19 +179,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "            Scientific Name  \\\n0         Abutilon julianae   \n1          Acacia ammophila   \n2            Acacia anomala   \n3            Acacia aphylla   \n4             Acacia aprica   \n...                     ...   \n2009  Zosterops albogularis   \n2010     Zosterops strenuus   \n2011          Zyzomys maini   \n2012      Zyzomys palatalis   \n2013   Zyzomys pedunculatus   \n\n                                            Common Name  \\\n0                               Norfolk Island Abutilon   \n1                                                     -   \n2                 Grass Wattle, Chittering Grass Wattle   \n3                                  Leafless Rock Wattle   \n4                                          Blunt Wattle   \n...                                                 ...   \n2009  White-chested White-eye, Norfolk Island Silvereye   \n2010                                   Robust White-eye   \n2011    Arnhem Rock-rat, Arnhem Land Rock-rat, Kodjperr   \n2012               Carpentarian Rock-rat, Aywalirroomoo   \n2013                           Central Rock-rat, Antina   \n\n     Current Scientific Name      Threatened status ACT  NSW   NT  QLD SA TAS  \\\n0                          -  Critically Endangered   -    -    -    -  -   -   \n1                          -             Vulnerable   -    -    -  Yes  -   -   \n2                          -             Vulnerable   -    -    -    -  -   -   \n3                          -             Vulnerable   -    -    -    -  -   -   \n4                          -             Endangered   -    -    -    -  -   -   \n...                      ...                    ...  ..  ...  ...  ... ..  ..   \n2009                       -                Extinct   -    -    -    -  -   -   \n2010                       -                Extinct   -  Yes    -    -  -   -   \n2011                       -             Vulnerable   -    -  Yes    -  -   -   \n2012                       -             Endangered   -    -  Yes    -  -   -   \n2013                       -  Critically Endangered   -    -  Yes    -  -   -   \n\n      ...                                            Profile Date extracted  \\\n0     ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n1     ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n2     ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n3     ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n4     ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n...   ...                                                ...            ...   \n2009  ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n2010  ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n2011  ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n2012  ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n2013  ...  http://www.environment.gov.au/cgi-bin/sprat/pu...    2023-Jun-02   \n\n                                             NSL Name        Family  \\\n0      https://id.biodiversity.org.au/name/apni/56543     Malvaceae   \n1      https://id.biodiversity.org.au/name/apni/58340      Fabaceae   \n2      https://id.biodiversity.org.au/name/apni/58556      Fabaceae   \n3      https://id.biodiversity.org.au/name/apni/58565      Fabaceae   \n4     https://id.biodiversity.org.au/name/apni/149911      Fabaceae   \n...                                               ...           ...   \n2009                                                -  Zosteropidae   \n2010                                                -  Zosteropidae   \n2011                                                -       Muridae   \n2012                                                -       Muridae   \n2013                                                -       Muridae   \n\n          Genus       Species Infraspecific Rank Infraspecies  \\\n0      Abutilon      julianae                  -            -   \n1        Acacia     ammophila                  -            -   \n2        Acacia       anomala                  -            -   \n3        Acacia       aphylla                  -            -   \n4        Acacia        aprica                  -            -   \n...         ...           ...                ...          ...   \n2009  Zosterops   albogularis                  -            -   \n2010  Zosterops      strenuus                  -            -   \n2011    Zyzomys         maini                  -            -   \n2012    Zyzomys     palatalis                  -            -   \n2013    Zyzomys  pedunculatus                  -            -   \n\n            Species Author Infraspecies Author  \n0                    Endl.                   -  \n1                   Pedley                   -  \n2     C.A.Gardner ex Court                   -  \n3                   Maslin                   -  \n4      Maslin  A.R.Chapman                   -  \n...                    ...                 ...  \n2009           Gould, 1837                   -  \n2010           Gould, 1855                   -  \n2011        Kitchener,1989                   -  \n2012        Kitchener,1989                   -  \n2013          (Waite,1896)                   -  \n\n[2014 rows x 35 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Scientific Name</th>\n      <th>Common Name</th>\n      <th>Current Scientific Name</th>\n      <th>Threatened status</th>\n      <th>ACT</th>\n      <th>NSW</th>\n      <th>NT</th>\n      <th>QLD</th>\n      <th>SA</th>\n      <th>TAS</th>\n      <th>...</th>\n      <th>Profile</th>\n      <th>Date extracted</th>\n      <th>NSL Name</th>\n      <th>Family</th>\n      <th>Genus</th>\n      <th>Species</th>\n      <th>Infraspecific Rank</th>\n      <th>Infraspecies</th>\n      <th>Species Author</th>\n      <th>Infraspecies Author</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Abutilon julianae</td>\n      <td>Norfolk Island Abutilon</td>\n      <td>-</td>\n      <td>Critically Endangered</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>https://id.biodiversity.org.au/name/apni/56543</td>\n      <td>Malvaceae</td>\n      <td>Abutilon</td>\n      <td>julianae</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Endl.</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Acacia ammophila</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Vulnerable</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Yes</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>https://id.biodiversity.org.au/name/apni/58340</td>\n      <td>Fabaceae</td>\n      <td>Acacia</td>\n      <td>ammophila</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Pedley</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Acacia anomala</td>\n      <td>Grass Wattle, Chittering Grass Wattle</td>\n      <td>-</td>\n      <td>Vulnerable</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>https://id.biodiversity.org.au/name/apni/58556</td>\n      <td>Fabaceae</td>\n      <td>Acacia</td>\n      <td>anomala</td>\n      <td>-</td>\n      <td>-</td>\n      <td>C.A.Gardner ex Court</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Acacia aphylla</td>\n      <td>Leafless Rock Wattle</td>\n      <td>-</td>\n      <td>Vulnerable</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>https://id.biodiversity.org.au/name/apni/58565</td>\n      <td>Fabaceae</td>\n      <td>Acacia</td>\n      <td>aphylla</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Maslin</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Acacia aprica</td>\n      <td>Blunt Wattle</td>\n      <td>-</td>\n      <td>Endangered</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>https://id.biodiversity.org.au/name/apni/149911</td>\n      <td>Fabaceae</td>\n      <td>Acacia</td>\n      <td>aprica</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Maslin  A.R.Chapman</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2009</th>\n      <td>Zosterops albogularis</td>\n      <td>White-chested White-eye, Norfolk Island Silvereye</td>\n      <td>-</td>\n      <td>Extinct</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>-</td>\n      <td>Zosteropidae</td>\n      <td>Zosterops</td>\n      <td>albogularis</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Gould, 1837</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>2010</th>\n      <td>Zosterops strenuus</td>\n      <td>Robust White-eye</td>\n      <td>-</td>\n      <td>Extinct</td>\n      <td>-</td>\n      <td>Yes</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>-</td>\n      <td>Zosteropidae</td>\n      <td>Zosterops</td>\n      <td>strenuus</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Gould, 1855</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>2011</th>\n      <td>Zyzomys maini</td>\n      <td>Arnhem Rock-rat, Arnhem Land Rock-rat, Kodjperr</td>\n      <td>-</td>\n      <td>Vulnerable</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Yes</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>-</td>\n      <td>Muridae</td>\n      <td>Zyzomys</td>\n      <td>maini</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Kitchener,1989</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>2012</th>\n      <td>Zyzomys palatalis</td>\n      <td>Carpentarian Rock-rat, Aywalirroomoo</td>\n      <td>-</td>\n      <td>Endangered</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Yes</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>-</td>\n      <td>Muridae</td>\n      <td>Zyzomys</td>\n      <td>palatalis</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Kitchener,1989</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <th>2013</th>\n      <td>Zyzomys pedunculatus</td>\n      <td>Central Rock-rat, Antina</td>\n      <td>-</td>\n      <td>Critically Endangered</td>\n      <td>-</td>\n      <td>-</td>\n      <td>Yes</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>...</td>\n      <td>http://www.environment.gov.au/cgi-bin/sprat/pu...</td>\n      <td>2023-Jun-02</td>\n      <td>-</td>\n      <td>Muridae</td>\n      <td>Zyzomys</td>\n      <td>pedunculatus</td>\n      <td>-</td>\n      <td>-</td>\n      <td>(Waite,1896)</td>\n      <td>-</td>\n    </tr>\n  </tbody>\n</table>\n<p>2014 rows × 35 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# conservationlist.to_csv(projectDir + \"current-lists/conservation-lists/EPBC-raw-20230615.csv\", encoding=\"UTF-8\", index=False)\n",
     "conservationlist\n"
    ],
    "metadata": {
@@ -474,7 +475,7 @@
    "source": [
     "#### Old code requires check against new\n",
     "\n",
-    "# def download_ala_list(url:str):\n",
+    "# def download_ala_specieslist(url:str):\n",
     "#  with urllib.request.urlopen(url,context=ssl.create_default_context(cafile=certifi.where())) as url:\n",
     "#   data = json.loads(url.read().decode())\n",
     "#   data = pd.json_normalize(data)\n",
@@ -482,9 +483,9 @@
     "#\n",
     "# # download the prod list\n",
     "# prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/dr656?max=10000\"\n",
-    "# prodList = download_ala_list(prodListUrl)\n",
+    "# prodList = download_ala_specieslist(prodListUrl)\n",
     "# testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/dr656?max=10000\"\n",
-    "# testList = download_ala_list(testListUrl)\n",
+    "# testList = download_ala_specieslist(testListUrl)\n",
     "#\n",
     "# # new names\n",
     "# testvsprod = pd.merge(testList,prodList,how='left',on='name')\n",
@@ -537,23 +538,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished downloading historical list\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "%%script echo skipping # comment this line to download the files and save locally\n",
-    "\n",
-    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# EPBC Conservation\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "print('EPBC conservation')\n",
+    "filename = \"EPBC-conservation.csv\"\n",
+    "testdr = \"dr656\"\n",
+    "proddr = \"dr656\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished EPBC conservation')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Download historical lists from Production\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "print('Finished downloading historical list')"
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
