--- a/source-code/py-notebook/conservation/NT-conservation.ipynb
+++ b/source-code/py-notebook/conservation/NT-conservation.ipynb
@@ -53,12 +53,18 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
+    "import datetime\n",
     "import sys\n",
+    "import os\n",
+    "\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "sourcedir = \"source-data/NT/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
-    "cdataDir = \"current-lists/conservation-lists/\"\n"
+    "cdataDir = \"current-lists/conservation-lists/\"\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf"
    ],
    "metadata": {
     "collapsed": false,
@@ -337,11 +343,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "result.to_csv(projectDir + cdataDir + 'NT-Conservation-20230601.csv',  encoding=\"UTF-8-sig\",index = False)\n",
     "print(\"Finished writing NT conservation listt\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"C\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# NT Conservation\n",
+    "print('NT conservation')\n",
+    "filename = \"NT-conservation.csv\"\n",
+    "testdr = \"dr651\"\n",
+    "proddr = \"dr651\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished NT conservation')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Download historical lists from Production\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
