--- a/source-code/py-notebook/conservation/QLD-conservation.ipynb
+++ b/source-code/py-notebook/conservation/QLD-conservation.ipynb
@@ -88,6 +88,7 @@
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "processedDataDir = projectDir + \"current-lists/\"\n",
     "state = 'QLD'\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "codesfile = statusDir + state + \"-codes.csv\"\n",
     "codesurl =  \"https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/species-status-codes.csv\"\n",
     "listurl = \"https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/species.csv\"\n"
@@ -416,11 +417,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "conservationlist.to_csv(processedDataDir + \"conservation-lists/QLD-conservation-20230601.csv\",encoding=\"UTF-8\",index=False)\n",
     "print(\"Finished writing QLD conservation list\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"C\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# Qld Conservation\n",
+    "print('QLD conservation')\n",
+    "filename = \"QLD-conservation.csv\"\n",
+    "testdr = \"dr652\"\n",
+    "proddr = \"dr652\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished QLD conservation')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Download historical lists from Production\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
