--- a/source-code/py-notebook/conservation/SA-conservation.ipynb
+++ b/source-code/py-notebook/conservation/SA-conservation.ipynb
@@ -42,11 +42,13 @@
     "import numpy as np\n",
     "import os\n",
     "import sys\n",
+    "import datetime\n",
     "\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "cdataDir = \"current-lists/conservation-lists/\"\n",
     "sourceData = \"source-data/SA/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
@@ -601,11 +603,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "conservationlist.to_csv(projectDir + cdataDir + \"SA-conservation-20230601.csv\",  encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing SA conservation list\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"C\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# SA Conservation\n",
+    "print('SA conservation')\n",
+    "filename = \"SA-conservation.csv\"\n",
+    "testdr = \"dr653\"\n",
+    "proddr = \"dr653\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished SA conservation')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Download historical lists from Production\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
