--- a/source-code/py-notebook/conservation/TAS-conservation.ipynb
+++ b/source-code/py-notebook/conservation/TAS-conservation.ipynb
@@ -48,11 +48,14 @@
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
+    "import datetime\n",
+    "\n",
     "# top level directory\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "\n",
     "import list_functions as lf\n",
     "cdataDir = \"current-lists/conservation-lists/\""
@@ -318,21 +321,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing to CSV\n",
-      "Finished processing conservation\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print('Writing to CSV')\n",
     "conservationlist.to_csv(projectDir + cdataDir + \"TAS-conservation-20230601.csv\", encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing TAS conservation list')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"C\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# TAS Conservation\n",
+    "print('TAS conservation')\n",
+    "filename = \"TAS-conservation.csv\"\n",
+    "testdr = \"dr654\"\n",
+    "proddr = \"dr654\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished TAS conservation')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Download historical lists from Production\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
