--- a/source-code/py-notebook/conservation/VIC-conservation.ipynb
+++ b/source-code/py-notebook/conservation/VIC-conservation.ipynb
@@ -48,10 +48,14 @@
     "import pandas as pd\n",
     "import sys\n",
     "import os\n",
+    "import datetime\n",
+    "\n",
     "\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
     "import list_functions as lf\n",
     "\n",
@@ -299,12 +303,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "#Write to CSV\n",
     "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation-20230601.csv\",  encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing VIC conservation list\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"C\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# VIC Conservation\n",
+    "print('VIC conservation')\n",
+    "filename = \"VIC-conservation.csv\"\n",
+    "testdr = \"dr655\"\n",
+    "proddr = \"dr655\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished VIC conservation')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Download historical lists from Production\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
