--- a/source-code/py-notebook/sensitive/TAS-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/TAS-sensitive.ipynb
@@ -2,24 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Tas Sensitive List\n",
-    "## List Identifiers\n",
-    "* Sensitive list: __[dr654](https://lists.ala.org.au/speciesListItem/list/dr654)__ (and [dr654 in test](https://lists-test.ala.org.au/speciesListItem/list/dr654))\n",
-    "* Collection: __[dr491](https://collections.ala.org.au/public/show/dr491)__\n",
-    "\n",
-    "## Source Data\n",
-    "\n",
-    "* __[Home page](https://nre.tas.gov.au/conservation/threatened-species-and-communities/lists-of-threatened-species/full-list-of-threatened-species)__\n",
-    "* __[Data](https://nre.tas.gov.au/Documents/TasThreatenedSpecies.XLS)__\n",
-    "\n",
-    "**Metadata Description**\n",
-    "\n",
-    "Sensitive List: A list of \"restricted species\" was supplied directly by the Tasmanian Department of Primary Industries, Parks, Water and Environment. It is not currently available on the Department's web site. The Atlas Of Living Australia withholds latitude and longitude values in occurrence records for sensitive Tasmanian species. This applies to all Tasmanian occurrence records regardless of source. Reviewed: 2/5/2013 Galaxias Fontanus removed from list 24/6/2013 on notification from DPIPWE\n",
-    "\n",
-    "**Metadata URL**\n",
-    "https://nre.tas.gov.au/conservation/threatened-species-and-communities/lists-of-threatened-species/full-list-of-threatened-species\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -48,11 +31,14 @@
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
+    "import datetime\n",
+    "\n",
     "# top level directory\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "\n",
     "import list_functions as lf\n",
     "sdataDir = \"current-lists/sensitive-lists/\""
@@ -185,21 +171,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing to CSV\n",
-      "Finished writing TAS Sensitive list\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print('Writing to CSV')\n",
     "sensitivelist.to_csv(projectDir + sdataDir + \"TAS-sensitive-20230614.csv\", encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing TAS Sensitive list\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Change logs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ltype = \"S\"\n",
+    "changeDir = \"Monitoring/Change-logs/\"\n",
+    "# TAS Sensitive - not currently in Test\n",
+    "print('TAS sensitive')\n",
+    "filename = \"TAS-sensitive.csv\"\n",
+    "testdr = \"dr18692\"\n",
+    "proddr = \"dr491\"\n",
+    "changelist = lf.get_changelist(testdr, proddr, ltype)\n",
+    "changelist.to_csv(projectDir + changeDir + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished TAS sensitive')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Sensitive Lists\n",
+    "state= \"TAS\"\n",
+    "filename = state + \"-\" + proddr + \"-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading sensitive historical list')"
    ],
    "metadata": {
     "collapsed": false,
