Fixed changelog code for both sensitive and conservation lists

--- a/source-code/py-notebook/conservation/ACT-conservation.ipynb
+++ b/source-code/py-notebook/conservation/ACT-conservation.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -321,11 +321,11 @@
      "text": [
       "ACT conservation\n",
       "get_changelist: Test -  dr649 Prod -  dr649\n",
-      "download_ala_specieslist:  https://lists.ala.org.au/ws/speciesListItems/dr649?max=10000&includeKVP=true\n",
+      "download_ala_list:  https://lists.ala.org.au/ws/speciesListItems/dr649?max=10000&includeKVP=true\n",
       "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
       "       'kvpValues'],\n",
       "      dtype='object')\n",
-      "download_ala_specieslist:  https://lists-test.ala.org.au/ws/speciesListItems/dr649?max=10000&includeKVP=true\n",
+      "download_ala_list:  https://lists-test.ala.org.au/ws/speciesListItems/dr649?max=10000&includeKVP=true\n",
       "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
       "       'kvpValues'],\n",
       "      dtype='object')\n",
