Updated WA Conservation and Sensitive lists - STABS

--- a/source-code/py-notebook/sensitive/WA-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/WA-sensitive.ipynb
@@ -44,13 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
     "import datetime\n",
+    "import sys\n",
+    "import os\n",
     "\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
@@ -58,6 +60,10 @@
     "processedDataDir = projectDir + \"current-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf\n",
+    "\n",
     "\n",
     "faunafilename = sourceDataDir + \"Threatened and Priority Fauna List 7 October2022.csv\"\n",
     "florafilename = sourceDataDir + \"Threatened and Priority Flora List 6 October2022.csv\""
@@ -393,8 +399,8 @@
     "    return s\n",
     "flora = flora.assign(status = flora.apply(setflorastatus,axis=1))\n",
     "flora['status description'] = flora['status'].map(statusLongDescriptionMapping).fillna(flora['status'])\n",
-    "flora['sourceStatus'] = flora.apply(lambda x: \"P\"+x[' WA Status'] if pd.isnull(x['WA Rank']) else x['WA Rank'],axis=1)\n",
-    "flora[[' WA Status','WA Rank','status','sourceStatus','status description']].drop_duplicates()"
+    "flora['category'] = flora.apply(lambda x: \"P\"+x[' WA Status'] if pd.isnull(x['WA Rank']) else x['WA Rank'],axis=1)\n",
+    "flora[[' WA Status','WA Rank','status','category','status description']].drop_duplicates()"
    ],
    "metadata": {
     "collapsed": false,
@@ -470,7 +476,7 @@
    "source": [
     "# line up the fields\n",
     "# flora = flora.drop(['Flowering Period', 'WA IUCN Criteria','Recovery Plan'], axis=1)\n",
-    "flora['sourceStatus'] = flora.apply(lambda x: \"P\"+x[' WA Status'] if pd.isnull(x['WA Rank']) else x['WA Rank'],axis=1)\n",
+    "flora['category'] = flora.apply(lambda x: \"P\"+x[' WA Status'] if pd.isnull(x['WA Rank']) else x['WA Rank'],axis=1)\n",
     "# flora['DBCA District'] = flora['DBCA District'].str.title()\n",
     "flora = flora.rename(columns=\n",
     "         {'Taxon': 'scientificName'\n",
@@ -479,7 +485,7 @@
     "fauna = fauna.rename(columns=\n",
     "        {'Scientific name': 'scientificName',\n",
     "         'Common name': 'vernacularName',\n",
-    "         'WA listing': 'sourceStatus'\n",
+    "         'WA listing': 'category'\n",
     "        })"
    ],
    "metadata": {
@@ -540,7 +546,7 @@
     }
    ],
    "source": [
-    "sensitivelist['sourceStatus'].unique()"
+    "sensitivelist['category'].unique()"
    ],
    "metadata": {
     "collapsed": false,
@@ -556,7 +562,6 @@
    "source": [
     "# floraandfauna['sensitivityZoneId'] = \"WA\"\n",
     "sensitivelist = sensitivelist[['scientificName','vernacularName','sourceStatus']]\n",
-    "sensitivelist = sensitivelist.rename(columns={'sourceStatus': 'category'})\n",
     "sensitivelist['generalisation'] = \"10 km\""
    ],
    "metadata": {
@@ -642,8 +647,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WA sensitive\n",
+      "get_changelist: Test -  dr18406 Prod -  dr467\n",
+      "download_ala_list:  https://lists.ala.org.au/ws/speciesListItems/dr467?max=10000&includeKVP=true\n",
+      "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
+      "       'kvpValues'],\n",
+      "      dtype='object')\n",
+      "download_ala_list:  https://lists-test.ala.org.au/ws/speciesListItems/dr18406?max=10000&includeKVP=true\n",
+      "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
+      "       'kvpValues'],\n",
+      "      dtype='object')\n",
+      "Finished WA sensitive\n"
+     ]
+    }
+   ],
    "source": [
     "ltype = \"S\"\n",
     "changeDir = \"Monitoring/Change-logs/\"\n",
@@ -665,14 +688,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "download_ala_list:  https://lists.ala.org.au/ws/speciesListItems/dr467?max=10000&includeKVP=true\n",
+      "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
+      "       'kvpValues'],\n",
+      "      dtype='object')\n",
+      "Finished downloading sensitive historical list\n"
+     ]
+    }
+   ],
    "source": [
     "# Sensitive Lists\n",
     "state= \"WA\"\n",
     "filename = state + \"-\" + proddr + \"-sensitive.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + proddr + \"?max=10000&includeKVP=true\"\n",
-    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.download_ala_specieslist(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
     "print('Finished downloading sensitive historical list')"
